# Cloud-Solutions-Openenv-RL

./: .env.example  .gitignore  GRADING.md  Makefile  README.md  __init__.py  client.py  hackathon.md  inference.py  models.py  openenv.yaml  pre_validation.py  pyproject.toml
.github/workflows/: validate.yml
server/: Dockerfile  Dockerfile.standalone  __init__.py  app.py  cloudfinops_env_environment.py  requirements.txt
tests/: conftest.py  test_api.py  test_engine.py
